syntax = "proto3";

package com.acowg.peer_edge_proto;

import "google/protobuf/empty.proto";

service FileRemapService {
  // Edge requests remapping of a catalog UUID
  rpc RemapFile(FileRemapRequest) returns (google.protobuf.Empty);
}

message FileRemapRequest {
  string old_catalog_uuid = 1;
  string new_catalog_uuid = 2;
}
